<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vod_player_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160dp"
        android:background="@drawable/overlay_title"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:src="@drawable/drawable_details_button"
        app:layout_constraintStart_toEndOf="@+id/vod_title"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/vod_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginTop="@dimen/_32dp"
        android:fontFamily="@font/roboto_regular"
        android:singleLine="true"
        android:text="southeast "
        android:maxWidth="160dp"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        android:visibility="visible"
        android:drawablePadding="@dimen/_6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="@dimen/_160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginTop="@dimen/_8dp"
        android:fontFamily="@font/roboto_regular"
        android:singleLine="true"
        android:text="@string/video_title"
        android:textColor="@color/logituit_white"
        android:textSize="@dimen/_12sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vod_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:background="@drawable/bg_edit_button"
            android:drawableStart="@drawable/drawable_subtiltle"
            android:drawablePadding="@dimen/_10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20dp"
            android:paddingVertical="@dimen/_4dp"
            android:text="@string/subtitles_off"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_language"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:background="@drawable/bg_edit_button"
            android:drawableStart="@drawable/drawable_language"
            android:drawablePadding="@dimen/_10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20dp"
            android:paddingVertical="4dp"
            android:text="@string/language_english"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_quality"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_30dp"
            android:background="@drawable/bg_edit_button"
            android:drawableStart="@drawable/drawable_quality"
            android:drawablePadding="@dimen/_10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20dp"
            android:paddingVertical="@dimen/_4dp"
            android:text="@string/quality_auto"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sp"
            android:visibility="gone"/>
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_320dp"
        android:background="@drawable/overlay_seekbar"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playPause"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="@dimen/_50dp"
        android:background="@drawable/ic_controls_pause_default"
        android:focusable="true"
        android:layout_marginBottom="@dimen/_40dp"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/playing_duration"
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginStart="@dimen/_92dp"
        android:gravity="center"
        android:text="hi"
        android:layout_marginBottom="@dimen/_40dp"
        android:textColor="@color/logituit_white"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBar"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_30dp"
        android:focusable="true"
        android:layout_marginBottom="@dimen/_40dp"
        android:focusableInTouchMode="true"
        android:maxHeight="@dimen/_2dp"
        android:paddingStart="@dimen/_10dp"
        android:paddingEnd="@dimen/_10dp"
        android:progressBackgroundTint="@color/logituit_white_40"
        android:progressDrawable="@drawable/seekbar_progress_style"
        android:progressTint="@color/logituit_white"
        android:thumb="@drawable/drawable_seekbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total_duration"
        app:layout_constraintStart_toEndOf="@+id/playing_duration" />

    <TextView
        android:id="@+id/total_duration"
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:gravity="center"
        android:text="hi"
        android:textColor="@color/logituit_white"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_episodes"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_42dp"
        android:background="@drawable/bg_edit_button"
        android:drawableStart="@drawable/drawable_key_moment"
        android:drawablePadding="@dimen/_10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_20dp"
        android:paddingVertical="@dimen/_4dp"
        android:text="@string/all_episodes"
        android:textAllCaps="false"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toTopOf="@+id/total_duration"
        app:layout_constraintEnd_toEndOf="@+id/total_duration" />

    <Button
        android:id="@+id/btn_next_episode"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_42dp"
        android:background="@drawable/bg_edit_button"
        android:drawableStart="@drawable/drawable_next_episode"
        android:drawablePadding="@dimen/_10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_20dp"
        android:paddingVertical="4dp"
        android:text="Next Episode"
        android:textAllCaps="false"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toTopOf="@+id/total_duration"
        app:layout_constraintEnd_toStartOf="@+id/btn_episodes" />

    <Button
        android:id="@+id/btn_skip_recap"
        android:layout_width="@dimen/_140dp"
        android:layout_height="@dimen/_35dp"
        android:layout_marginBottom="@dimen/_42dp"
        android:background="@drawable/bg_edit_button"
        android:drawableStart="@drawable/ic_skip_recape"
        android:drawablePadding="@dimen/_10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_20dp"
        android:paddingVertical="@dimen/_4dp"
        android:text="@string/skip_recap"
        android:textAllCaps="false"
        android:textSize="@dimen/_12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/total_duration"
        app:layout_constraintStart_toStartOf="@+id/playPause" />

    <Button
        android:id="@+id/btn_watch_from_begnining"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_42dp"
        android:background="@drawable/bg_edit_button"
        android:drawableStart="@drawable/drawable_go_live"
        android:drawablePadding="@dimen/_10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_20dp"
        android:paddingVertical="4dp"
        android:text="Watch From Beginning"
        android:textAllCaps="false"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toTopOf="@+id/total_duration"
        app:layout_constraintStart_toStartOf="@+id/playPause" />



</androidx.constraintlayout.widget.ConstraintLayout>
