<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">


    <com.logituit.logixsdk.logixplayer.player.LogixPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">
        <FrameLayout
            android:id="@+id/fl_background_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@drawable/ic_overlay_player"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_black"
            android:visibility="visible"
            />
        <FrameLayout
            android:id="@+id/fl_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_black_80"
            android:visibility="visible"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home_logo"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
        <!--   <ProgressBar
               android:id="@+id/progressBar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:indeterminateTint="@color/logituit_white_56"
               android:visibility="gone" />-->

    </com.logituit.logixsdk.logixplayer.player.LogixPlayerView>
    <include
        android:id="@+id/layout_actions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        layout="@layout/live_controller"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.leanback.widget.BrowseFrameLayout
        android:id="@+id/blfKeyMoment"
        android:layout_width="@dimen/_450dp"
        android:layout_height="match_parent"
        android:background="#0F0728"
        android:nextFocusLeft="@id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginLeft="@dimen/_50dp"
            android:layout_marginRight="@dimen/_50dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16dp"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_40dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/logituit_white"
                android:text="@string/key_moments"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_key_moment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>
    </androidx.leanback.widget.BrowseFrameLayout>
    <androidx.leanback.widget.BrowseFrameLayout
        android:id="@+id/blfLanguage"
        android:layout_width="@dimen/_220dp"
        android:layout_height="match_parent"
        android:background="#0F0728"
        android:visibility="gone"
        android:nextFocusLeft="@id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginLeft="@dimen/_50dp"
            android:layout_marginRight="@dimen/_50dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16dp"
                android:textColor="@color/logituit_white"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/language"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_language"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_16sp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </androidx.leanback.widget.BrowseFrameLayout>
    <androidx.leanback.widget.BrowseFrameLayout
        android:id="@+id/blfQuality"
        android:layout_width="@dimen/_220dp"
        android:layout_height="match_parent"
        android:background="#0F0728"
        android:visibility="gone"
        android:nextFocusLeft="@id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginLeft="@dimen/_50dp"
            android:layout_marginRight="@dimen/_50dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16dp"
                android:textColor="@color/logituit_white"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/quality"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_quality"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_16sp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </androidx.leanback.widget.BrowseFrameLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_player_logo"
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_40dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginRight="@dimen/_32dp"
        android:src="@drawable/ic_player_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>